2011-06-16  Denis Lila  <dlila@redhat.com>

	* Makefile.am: Add ContextEvent to the list of pulse audio classes that
	need javah run on them.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextEvent.java
	(Type): Remove and replace with...
	(UNCONNECTED, CONNECTING, AUTHORIZING, SETTING_NAME, READY, FAILED,
	 TERMINATED): New static long variables replacing enum Type.
	(init_constants): New native method to initialize the above variables.
	(checkNativeEnumReturn): Make sure that the input is one of the longs
	representing the type of ContextEvent.
	(type): Change type from Type to long.
	(ContextEvent): Take a long argument, instead of a Type.
	(getType): Return a long, not a Type.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/EventLoop.java
	(status): Change from int to long.
	(native_set_sink_volume): Remove. It was unimplemented in the JNI side.
	(getStatus): Return long instead of int.
	(update): Replace int argument with long argument. Remove the switch
	statement.
	(setVolume): Remove. Unused.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Operation.java
	(State): Remove and replace with...
	(Running, Done, Cancelled): Static longs, enumerating the possible
	operation states.
	(init_constants): New native method to initialize the above variables.
	(checkNativeOperationState): Make sure that the input is one of the longs
	representing the operation state.
	(native_get_state): Change return type from int to long.
	(getState): Change return type to long; remove switch.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java
	Remove the names of enums from the names of constants since most of them
	were changed to static longs.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMixer.java
	Same changes as in PulseAudioDataLine.java.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Stream.java
	(State): Remove and replace with...